# claude-skills

./: .gitignore  README.md
codify/: SKILL.md
content-pipeline/: SKILL.md
content-pipeline/templates/: content-standards.md
daily-digest/: SKILL.md  config.local.json  push_history.json
daily-digest/scripts/: dedup.py  prefetch.py
eat/: SKILL.md
excalidraw-diagram/: SKILL.md
excalidraw-diagram/references/: excalidraw-codegen.md
excalidraw-diagram/scripts/: render-diagram.sh
feishu-doc-to-md/: SKILL.md
feishu-doc-to-md/agents/: openai.yaml
feishu-doc-to-md/scripts/: export_feishu_doc.py  validate_export.py
feishu-doc-update/: SKILL.md
image-to-svg/: SKILL.md
init-project/: SKILL.md
install-skill/: SKILL.md
ip/: SKILL.md
onchain-investigator/: SKILL.md
png-diagram/: SKILL.md
png-diagram/references/: design-system.md
png-diagram/references/diagrams/: class.md  er.md  flowchart.md  state.md
pua/: SKILL.md
reqable-capture/: SKILL.md
ruminate/: SKILL.md
searxng-search/: SKILL.md
searxng-search/scripts/: searx
skill-reflect/: SKILL.md
smart-ocr/: SKILL.md
smart-ocr/scripts/: ocr  ocr.swift
tech-doc-writing/: SKILL.md
think-deeper/: SKILL.md
think-deeper/references/: clarity-dimensions.md
tmux-cli/: SKILL.md
tmux-cli/scripts/: pyproject.toml
tmux-cli/scripts/tmux_cli/: __init__.py  tmux_cli_controller.py  tmux_remote_controller.py
writing-pipeline/: SKILL.md
writing-pipeline/references/: scoring-rubric.md
